@@ -24,15 +24,27 @@ run() {
 }
 
 default() {
-  run JRUBY_OPTS= JAVA_OPTS=
+  run JRUBY_OPTS="-Xcompile.invokedynamic=false"
+}
+
+mem4g() {
+  run JRUBY_OPTS="-Xcompile.invokedynamic=false" JAVA_OPTS="-Xmx4g -Xms256m"
 }
 
 indy() {
   run JRUBY_OPTS="-Xcompile.invokedynamic=true"
 }
 
+indy4g() {
+  run JRUBY_OPTS="-Xcompile.invokedynamic=true" JAVA_OPTS="-Xmx4g -Xms256m"
+}
+
 gctune() {
   run JAVA_OPTS="-XX:ReservedCodeCacheSize=128m -XX:+UseBiasedLocking -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:SurvivorRatio=8 -XX:MaxTenuringThreshold=15 -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly -XX:+HeapDumpOnOutOfMemoryError"
+}
+
+gctune4g() {
+  run JAVA_OPTS="-XX:ReservedCodeCacheSize=128m -XX:+UseBiasedLocking -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:SurvivorRatio=8 -XX:MaxTenuringThreshold=15 -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly -XX:+HeapDumpOnOutOfMemoryError -Xmx4g -Xms256m"
 }
 
 cp index.html $workdir/index.html
@@ -50,5 +62,8 @@ cp index.html $workdir/index.html
 
 echo "name	env" > $index
 default
+mem4g
 indy
+indy4g
 gctune
+gctune4g
